--- a/lec3/lec3.ipynb
+++ b/lec3/lec3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a7b712b-abe8-4677-b006-001e8b1e9a86",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0474ce5e",
+   "id": "2d6f2102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d8ce0ce",
+   "id": "7c548c14",
    "metadata": {
     "scrolled": false
    },
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83ae86a",
+   "id": "49229768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
    "id": "d3afa228-5f0d-41b6-b941-261e6a3ab1db",
    "metadata": {},
    "source": [
-    "# Lab3-3. Text Classification Using RNN"
+    "# Lab3-3. Speech Command Classification Using RNN"
    ]
   },
   {
@@ -295,25 +295,204 @@
    },
    "outputs": [],
    "source": [
-    "# Prepare IMDB datasets\n",
-    "TEXT = torchtext.data.Field(sequential=True, batch_first=True, lower=True)\n",
-    "LABEL = torchtext.data.Field(sequential=False, batch_first=True)\n",
-    "dataset_train, dataset_test = torchtext.datasets.IMDB.splits(TEXT, LABEL)\n",
+    "# Prepare datasets\n",
+    "class SubsetSC(SPEECHCOMMANDS):\n",
+    "    def __init__(self, subset: str = None):\n",
+    "        super().__init__(\"./\", download=True)\n",
+    "\n",
+    "        def load_list(filename):\n",
+    "            filepath = os.path.join(self._path, filename)\n",
+    "            with open(filepath) as fileobj:\n",
+    "                return [os.path.normpath(os.path.join(self._path, line.strip())) for line in fileobj]\n",
+    "\n",
+    "        if subset == \"validation\":\n",
+    "            self._walker = load_list(\"validation_list.txt\")\n",
+    "        elif subset == \"testing\":\n",
+    "            self._walker = load_list(\"testing_list.txt\")\n",
+    "        elif subset == \"training\":\n",
+    "            excludes = load_list(\"validation_list.txt\") + load_list(\"testing_list.txt\")\n",
+    "            excludes = set(excludes)\n",
+    "            self._walker = [w for w in self._walker if w not in excludes]\n",
     "\n",
     "\n",
-    "# Print datasets\n",
-    "print(vars(dataset_test[0]))"
+    "train_set = SubsetSC(\"training\")\n",
+    "test_set = SubsetSC(\"testing\")\n",
+    "\n",
+    "waveform, sample_rate, label, speaker_id, utterance_number = train_set[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af26e2c1",
+   "id": "6bb3e97f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(trainset, min_freq=5)\n",
-    "LABEL.build_vocab(trainset)"
+    "import IPython.display as ipd\n",
+    "\n",
+    "waveform, sample_rate, label, speaker_id, utterance_number = train_set[1]\n",
+    "plt.plot(waveform.t().numpy())\n",
+    "plt.show()\n",
+    "ipd.display(ipd.Audio(waveform.numpy(), rate=sample_rate))\n",
+    "print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06900118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = sorted(list(set(datapoint[2] for datapoint in train_set)))\n",
+    "\n",
+    "def label_to_index(word):\n",
+    "    # Return the position of the word in labels\n",
+    "    return torch.tensor(labels.index(word))\n",
+    "\n",
+    "\n",
+    "def index_to_label(index):\n",
+    "    # Return the word corresponding to the index in labels\n",
+    "    # This is the inverse of label_to_index\n",
+    "    return labels[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590ab6eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 256\n",
+    "\n",
+    "\n",
+    "def pad_sequence(batch):\n",
+    "    # Make all tensor in a batch the same length by padding with zeros\n",
+    "    batch = [item.t() for item in batch]\n",
+    "    batch = torch.nn.utils.rnn.pad_sequence(batch, batch_first=True, padding_value=0.)\n",
+    "    return batch.permute(0, 2, 1)\n",
+    "\n",
+    "\n",
+    "def collate_fn(batch):\n",
+    "    # A data tuple has the form:\n",
+    "    # waveform, sample_rate, label, speaker_id, utterance_number\n",
+    "    tensors, targets = [], []\n",
+    "\n",
+    "    # Gather in lists, and encode labels as indices\n",
+    "    for waveform, _, label, *_ in batch:\n",
+    "        tensors += [waveform]\n",
+    "        targets += [label_to_index(label)]\n",
+    "\n",
+    "    # Group the list of tensors into a batched tensor\n",
+    "    tensors = pad_sequence(tensors)\n",
+    "    targets = torch.stack(targets)\n",
+    "\n",
+    "    return tensors, targets\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    train_set,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=True,\n",
+    "    collate_fn=collate_fn,\n",
+    ")\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "    test_set,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=False,\n",
+    "    drop_last=False,\n",
+    "    collate_fn=collate_fn,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84508f81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self, input_size=80, hidden_size=384, num_layers=4, output_size=35):\n",
+    "        super().__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            input_size,\n",
+    "            hidden_size,\n",
+    "            num_layers=num_layers,\n",
+    "            batch_first=True,\n",
+    "            dropout=0.1,\n",
+    "            bidirectional=True,\n",
+    "        )\n",
+    "        self.output = nn.Linear(2*hidden_size, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x.shape: [BATCH_SIZE, 1, 80, Length]\n",
+    "        x = x.squeeze(1).transpose(1, 2)  # x.shape: [BATCH_SIZE, LENGTH, 80]\n",
+    "        _, (h, c) = self.lstm(x)          # h.shape: [2*num_layers, BATCH_SIZE, hidden_size]\n",
+    "        x = h.transpose(0, 1)[:, -2:, :].reshape(-1, 2*self.hidden_size)  # [BATCH_SIZE, 2*hidden_size]\n",
+    "        x = self.output(x)\n",
+    "        return x\n",
+    "        \n",
+    "\n",
+    "model = Net().cuda()\n",
+    "mel_spectrogram = torchaudio.transforms.MelSpectrogram(sample_rate, n_fft=512, hop_length=256, n_mels=80).cuda()\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.01)\n",
+    "\n",
+    "\n",
+    "def train(model, epoch, log_interval):\n",
+    "    model.train()\n",
+    "    for batch_idx, (x, target) in enumerate(train_loader):\n",
+    "        x = x.cuda()\n",
+    "        target = target.cuda()\n",
+    "\n",
+    "        # forward propagation\n",
+    "        x = mel_spectrogram(x)\n",
+    "        output = model(x)\n",
+    "\n",
+    "        # loss\n",
+    "        loss = F.cross_entropy(output, target)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # print training stats\n",
+    "        print(\n",
+    "            f\"\\rTrain Epoch: {epoch} [{batch_idx * len(x)}/{len(train_loader.dataset)} \"\n",
+    "            f\"({100. * batch_idx / len(train_loader):.0f}%)]\\tLoss: {loss.item():.6f}\",\n",
+    "            flush=True,\n",
+    "            end=\"\"\n",
+    "        )\n",
+    "\n",
+    "        # record loss\n",
+    "        losses.append(loss.item())\n",
+    "\n",
+    "\n",
+    "def test(model, epoch):\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    for x, target in test_loader:\n",
+    "        x = x.cuda()\n",
+    "        target = target.cuda()\n",
+    "\n",
+    "        # forward propagation\n",
+    "        x = mel_spectrogram(x)\n",
+    "        output = model(x)\n",
+    "\n",
+    "        pred = output.argmax(dim=-1)\n",
+    "        correct += (pred == target).sum().item()\n",
+    "\n",
+    "    print(f\"\\nTest Epoch: {epoch}\\tAccuracy: {correct}/{len(test_loader.dataset)} ({100. * correct / len(test_loader.dataset):.0f}%)\\n\")\n",
+    "\n",
+    "\n",
+    "TOTAL_EPOCH = 2\n",
+    "losses = []\n",
+    "\n",
+    "# The transform needs to live on the same device as the model and the data.\n",
+    "for epoch in range(1, TOTAL_EPOCH + 1):\n",
+    "    train(model, epoch, log_interval)\n",
+    "    test(model, epoch)"
    ]
   }
  ],
