--- a/lec3/lec3.ipynb
+++ b/lec3/lec3.ipynb
@@ -10,12 +10,10 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import random\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch.nn import functional as F\n",
     "from torchvision import datasets, transforms\n",
-    "import torchtext\n",
     "\n",
     "def visualize_mnist(dataloader, model=None, title=\"\"):\n",
     "    x, y = next(iter(dataloader_test))\n",
@@ -49,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6f2102",
+   "id": "6de9fded",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c548c14",
+   "id": "9be447d9",
    "metadata": {
     "scrolled": false
    },
@@ -252,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49229768",
+   "id": "c161afda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +293,15 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
+    "import torchaudio\n",
+    "from torchaudio.datasets import SPEECHCOMMANDS\n",
+    "\n",
     "# Prepare datasets\n",
     "class SubsetSC(SPEECHCOMMANDS):\n",
     "    def __init__(self, subset: str = None):\n",
@@ -324,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bb3e97f",
+   "id": "bb106a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06900118",
+   "id": "f99c1842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590ab6eb",
+   "id": "c3be2a37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84508f81",
+   "id": "1d75f7be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,8 +446,21 @@
     "mel_spectrogram = torchaudio.transforms.MelSpectrogram(sample_rate, n_fft=512, hop_length=256, n_mels=80).cuda()\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=0.01)\n",
     "\n",
-    "\n",
-    "def train(model, epoch, log_interval):\n",
+    "# Model predictiton before training\n",
+    "waveform, sample_rate, label, speaker_id, utterance_number = train_set[1]\n",
+    "mel = mel_spectrogram(waveform.cuda())\n",
+    "prediction = model(mel).argmax(dim=-1)\n",
+    "print(f\"prediction: {index_to_label(prediction)} / answer: {label}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c9ba20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, epoch):\n",
     "    model.train()\n",
     "    for batch_idx, (x, target) in enumerate(train_loader):\n",
     "        x = x.cuda()\n",
@@ -491,9 +511,23 @@
     "\n",
     "# The transform needs to live on the same device as the model and the data.\n",
     "for epoch in range(1, TOTAL_EPOCH + 1):\n",
-    "    train(model, epoch, log_interval)\n",
-    "    test(model, epoch)"
+    "    train(model, epoch)\n",
+    "    test(model, epoch)\n",
+    "\n",
+    "# Model predictiton after training\n",
+    "waveform, sample_rate, label, speaker_id, utterance_number = train_set[1]\n",
+    "mel = mel_spectrogram(waveform.cuda())\n",
+    "prediction = model(mel).argmax(dim=-1)\n",
+    "print(f\"prediction: {index_to_label(prediction)} / answer: {label}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9fcf717",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
