--- a/lec4/lec4-2.ipynb
+++ b/lec4/lec4-2.ipynb
@@ -2,116 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Map: 100%|██████████| 1000/1000 [00:00<00:00, 2645.32 examples/s]\n",
-      "Map: 100%|██████████| 200/200 [00:00<00:00, 2585.54 examples/s]\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/transformers/training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n",
-      "/tmp/ipykernel_516044/1552370282.py:36: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
-      "  trainer = Trainer(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='24' max='24' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [24/24 00:28, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>0.641804</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.667700</td>\n",
-       "      <td>0.546248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.535700</td>\n",
-       "      <td>0.489514</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.48951423168182373, 'eval_runtime': 0.681, 'eval_samples_per_second': 293.698, 'eval_steps_per_second': 2.937, 'epoch': 3.0}\n",
-      "[1 1 0 1 0 1 1 0 1 1 1 0 0 0 1 0 0 0 1 1 0 1 0 1 0 1 0 1 1 1 1 0 0 0 1 1 1\n",
-      " 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 1 1 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 1 0 1 0 0 0 1 1 1 1 0 0 1 1 1 0 1 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0\n",
-      " 1 1 1 0 1 1 1 1 0 0 0 0 1 1 1 0 1 0 1 0 0 0 1 1 1 1 0 1 1 0 1 1 0 1 0 1 1\n",
-      " 1 0 0 0 0 1 0 0 1 0 1 0 0 1 0 1 0 1 1 0 0 0 1 1 0 0 0 0 1 1 1 1 0 1 1 0 0\n",
-      " 0 0 1 1 0 1 0 0 0 1 1 0 1 0 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "! pip install transformers datasets sentencepiece accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# 1. 모델과 토크나이저 불러오기\n",
+    "os.environ[\"WANDB_DISABLED\"] = \"true\"  # wandb 사용하지 않음\n",
+    "\n",
+    "# 1. load pretrained tokenizer and model\n",
     "model_name = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example input\n",
+    "inputs = tokenizer(\"I want to submit paper...\", return_tensors=\"pt\")\n",
     "\n",
+    "# initial inference for example input: might be random\n",
+    "outputs = model(**inputs.to(model.device))\n",
+    "predictions = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
+    "labels = [\"NEGATIVE\", \"POSITIVE\"]\n",
+    "result = labels[torch.argmax(predictions)]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2. 데이터셋 불러오기\n",
     "dataset = load_dataset(\"imdb\")  # IMDb 영화 리뷰 데이터셋\n",
     "train_dataset = dataset[\"train\"].shuffle(seed=42).select(range(1000))  # 일부 데이터로 실습\n",
@@ -135,7 +74,8 @@
     "    weight_decay=0.01,\n",
     "    logging_dir=\"./logs\",\n",
     "    logging_steps=10,\n",
-    "    save_strategy=\"epoch\"\n",
+    "    save_strategy=\"epoch\",\n",
+    "    report_to=\"none\",\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -144,257 +84,21 @@
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
     "    tokenizer=tokenizer\n",
-    ")\n",
-    "\n",
-    "# 5. 훈련 실행\n",
-    "trainer.train()\n",
-    "\n",
-    "# 6. 평가\n",
-    "results = trainer.evaluate()\n",
-    "print(results)\n",
-    "\n",
-    "# 7. 예측\n",
-    "predictions = trainer.predict(test_dataset)\n",
-    "print(predictions.predictions.argmax(-1))  # 예측 결과\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install transformers datasets sentencepiece accelerate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/transformers/loss/loss_for_object_detection.py:28: UserWarning: A NumPy version >=1.23.5 and <2.3.0 is required for this version of SciPy (detected version 1.23.1)\n",
-      "  from scipy.optimize import linear_sum_assignment\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POSITIVE\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import torch\n",
-    "\n",
-    "# 모델 및 토크나이저 불러오기\n",
-    "model_name = \"bert-base-uncased\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
-    "\n",
-    "# 입력 데이터 처리\n",
-    "inputs = tokenizer(\"I love HuggingFace!\", return_tensors=\"pt\")\n",
-    "\n",
-    "# 모델 추론\n",
-    "outputs = model(**inputs)\n",
-    "predictions = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
-    "labels = [\"NEGATIVE\", \"POSITIVE\"]\n",
-    "result = labels[torch.argmax(predictions)]\n",
-    "print(result)\n",
-    "# 결과: POSITIVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text': 'I rented I AM CURIOUS-YELLOW from my video store because of all the controversy that surrounded it when it was first released in 1967. I also heard that at first it was seized by U.S. customs if it ever tried to enter this country, therefore being a fan of films considered \"controversial\" I really had to see this for myself.<br /><br />The plot is centered around a young Swedish drama student named Lena who wants to learn everything she can about life. In particular she wants to focus her attentions to making some sort of documentary on what the average Swede thought about certain political issues such as the Vietnam War and race issues in the United States. In between asking politicians and ordinary denizens of Stockholm about their opinions on politics, she has sex with her drama teacher, classmates, and married men.<br /><br />What kills me about I AM CURIOUS-YELLOW is that 40 years ago, this was considered pornographic. Really, the sex and nudity scenes are few and far between, even then it\\'s not shot like some cheaply made porno. While my countrymen mind find it shocking, in reality sex and nudity are a major staple in Swedish cinema. Even Ingmar Bergman, arguably their answer to good old boy John Ford, had sex scenes in his films.<br /><br />I do commend the filmmakers for the fact that any sex shown in the film is shown for artistic purposes rather than just to shock people and make money to be shown in pornographic theaters in America. I AM CURIOUS-YELLOW is a good film for anyone wanting to study the meat and potatoes (no pun intended) of Swedish cinema. But really, this film doesn\\'t have much of a plot.', 'label': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "dataset = load_dataset(\"imdb\")\n",
-    "print(dataset[\"train\"][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-    "\n",
-    "model_name = \"distilbert-base-uncased\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 25000/25000 [00:07<00:00, 3471.13 examples/s]\n",
-      "Map: 100%|██████████| 25000/25000 [00:06<00:00, 3747.30 examples/s]\n",
-      "Map: 100%|██████████| 50000/50000 [00:13<00:00, 3675.40 examples/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def preprocess_data(examples):\n",
-    "    return tokenizer(examples['text'], truncation=True, padding='max_length')\n",
-    "\n",
-    "dataset = dataset.map(preprocess_data, batched=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/transformers/training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import TrainingArguments, Trainer\n",
-    "\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir=\"./results\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
-    "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    per_device_eval_batch_size=8,\n",
-    "    num_train_epochs=3,\n",
-    "    weight_decay=0.01,\n",
-    "    logging_dir=\"./logs\",\n",
-    "    logging_steps=10,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='1173' max='1173' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1173/1173 08:01, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0.213900</td>\n",
-       "      <td>0.197641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.183500</td>\n",
-       "      <td>0.186191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.116100</td>\n",
-       "      <td>0.199014</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n",
-      "/home/jmh/anaconda3/envs/jmhan/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=1173, training_loss=0.18527000728368961, metrics={'train_runtime': 488.5425, 'train_samples_per_second': 153.518, 'train_steps_per_second': 2.401, 'total_flos': 9935054899200000.0, 'train_loss': 0.18527000728368961, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=dataset[\"train\"],\n",
-    "    eval_dataset=dataset[\"test\"]\n",
-    ")\n",
+    "# 5. 훈련 실행\n",
+    "trainer.train()\n",
     "\n",
-    "trainer.train()"
+    "# 6. 평가\n",
+    "results = trainer.evaluate()\n",
+    "print(results)\n"
    ]
   },
   {
@@ -403,47 +107,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
-    "from datasets import load_dataset\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-    "from transformers import TrainingArguments, Trainer\n",
-    "\n",
-    "dataset = load_dataset(\"imdb\")\n",
-    "print(dataset[\"train\"][0])\n",
-    "def preprocess_data(examples):\n",
-    "    return tokenizer(examples['text'], truncation=True, padding='max_length')\n",
-    "dataset = dataset.map(preprocess_data, batched=True)\n",
-    "\n",
-    "model_name = \"distilbert-base-uncased\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
-    "\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir=\"./results\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
-    "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    per_device_eval_batch_size=8,\n",
-    "    num_train_epochs=3,\n",
-    "    weight_decay=0.01,\n",
-    "    logging_dir=\"./logs\",\n",
-    "    logging_steps=10,\n",
-    ")\n",
-    "\n",
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=dataset[\"train\"],\n",
-    "    eval_dataset=dataset[\"test\"]\n",
-    ")\n",
-    "\n",
-    "trainer.train()"
+    "# 모델 추론\n",
+    "inputs = tokenizer(\"I want to submit paper...\", return_tensors=\"pt\")\n",
+    "outputs = model(**inputs.to(model.device))\n",
+    "predictions = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
+    "labels = [\"NEGATIVE\", \"POSITIVE\"]\n",
+    "result = labels[torch.argmax(predictions)]\n",
+    "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aiwinter_test",
+   "display_name": "jmhan",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
