--- a/lec4/lec4-2.ipynb
+++ b/lec4/lec4-2.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "os.environ[\"WANDB_DISABLED\"] = \"true\"  # wandb 사용하지 않음\n",
     "\n",
-    "# 1. load pretrained tokenizer and model\n",
+    "# load pretrained tokenizer and model\n",
     "model_name = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n"
@@ -51,19 +51,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 데이터셋 불러오기\n",
+    "# load and preprocess dataset\n",
     "dataset = load_dataset(\"imdb\")  # IMDb 영화 리뷰 데이터셋\n",
     "train_dataset = dataset[\"train\"].shuffle(seed=42).select(range(1000))  # 일부 데이터로 실습\n",
     "test_dataset = dataset[\"test\"].shuffle(seed=42).select(range(200))\n",
     "\n",
-    "# 3. 데이터 전처리\n",
     "def preprocess_data(examples):\n",
     "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=512)\n",
     "\n",
     "train_dataset = train_dataset.map(preprocess_data, batched=True)\n",
     "test_dataset = test_dataset.map(preprocess_data, batched=True)\n",
     "\n",
-    "# 4. Trainer 설정\n",
+    "# training configuration\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./results\",\n",
     "    evaluation_strategy=\"epoch\",\n",
@@ -93,10 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. 훈련 실행\n",
+    "# fine-tuning\n",
     "trainer.train()\n",
     "\n",
-    "# 6. 평가\n",
+    "# evaluation\n",
     "results = trainer.evaluate()\n",
     "print(results)\n"
    ]
@@ -107,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 모델 추론\n",
+    "# inference after fine-tuning\n",
     "inputs = tokenizer(\"I want to submit paper...\", return_tensors=\"pt\")\n",
     "outputs = model(**inputs.to(model.device))\n",
     "predictions = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
