revise lec4 codes

--- a/lec4/lec4-2.ipynb
+++ b/lec4/lec4-2.ipynb
@@ -20,20 +20,13 @@
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
     "from datasets import load_dataset\n",
     "\n",
-    "os.environ[\"WANDB_DISABLED\"] = \"true\"  # wandb 사용하지 않음\n",
+    "os.environ[\"WANDB_DISABLED\"] = \"true\"  # for disabling wandb\n",
     "\n",
     "# load pretrained tokenizer and model\n",
     "model_name = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
+    "\n",
     "# example input\n",
     "inputs = tokenizer(\"I want to submit paper...\", return_tensors=\"pt\")\n",
     "\n",
@@ -83,19 +76,10 @@
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
     "    tokenizer=tokenizer\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fine-tuning\n",
-    "trainer.train()\n",
+    ")\n",
     "\n",
-    "# evaluation\n",
+    "# fine-tuning & evaluation\n",
+    "trainer.train()\n",
     "results = trainer.evaluate()\n",
     "print(results)\n"
    ]
