--- a/lec3/lec3.ipynb
+++ b/lec3/lec3.ipynb
@@ -318,6 +318,9 @@
         "import torchaudio\n",
         "from torchaudio.datasets import SPEECHCOMMANDS\n",
         "\n",
+        "BATCH_SIZE = 2048\n",
+        "LR = 0.002\n",
+        "TOTAL_EPOCH = 5\n",
         "LABELS = [\"yes\", \"no\", \"up\", \"down\", \"left\", \"right\", \"on\", \"off\", \"stop\", \"go\"]\n",
         "\n",
         "# Prepare datasets\n",
@@ -389,9 +392,6 @@
       },
       "outputs": [],
       "source": [
-        "BATCH_SIZE = 2048\n",
-        "\n",
-        "\n",
         "def pad_sequence(batch):\n",
         "    # Make all tensor in a batch the same length by padding with zeros\n",
         "    batch = [item.t() for item in batch]\n",
@@ -465,7 +465,7 @@
         "\n",
         "model = Net().cuda()\n",
         "mel_transform = mel_transform.cuda()\n",
-        "optimizer = torch.optim.AdamW(model.parameters(), lr=0.01)\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), lr=LR)\n",
         "\n",
         "# Model predictiton before training\n",
         "waveform, sample_rate, label, speaker_id, utterance_number = train_set[1]\n",
@@ -486,7 +486,8 @@
       "source": [
         "def train(model, epoch):\n",
         "    model.train()\n",
-        "    for batch_idx, (x, target) in enumerate(train_loader):\n",
+        "    total_loss = 0.\n",
+        "    for batch_idx, (x, target) in enumerate(train_loader, start=1):\n",
         "        x = x.cuda()\n",
         "        target = target.cuda()\n",
         "\n",
@@ -496,6 +497,7 @@
         "\n",
         "        # loss\n",
         "        loss = F.cross_entropy(output, target)\n",
+        "        total_loss += loss.item()\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
@@ -504,15 +506,12 @@
         "        # print training stats\n",
         "        print(\n",
         "            f\"\\rEpoch {epoch} - train [{batch_idx * len(x)}/{len(train_loader.dataset)} \"\n",
-        "            f\"({100. * batch_idx / len(train_loader):.0f}%)]\\tLoss: {loss.item():.6f}\",\n",
+        "            f\"({100. * batch_idx / len(train_loader):.0f}%)] Loss: {total_loss / batch_idx:.4f}\",\n",
         "            flush=True,\n",
         "            end=\"\"\n",
         "        )\n",
-        "\n",
-        "        # record loss\n",
-        "        losses.append(loss.item())\n",
         "    print(\n",
-        "        f\"\\rEpoch {epoch} - train loss: {loss.item():.6f}, \",\n",
+        "        f\"\\rEpoch {epoch} - train loss: {total_loss / batch_idx:.4f}, \",\n",
         "        flush=True,\n",
         "        end=\"\"\n",
         "    )\n",
@@ -532,16 +531,15 @@
         "        pred = output.argmax(dim=-1)\n",
         "        correct += (pred == target).sum().item()\n",
         "\n",
-        "    print(f\" test accuracy: {100. * correct / len(test_loader.dataset):.1f}%\")\n",
+        "    print(f\" test accuracy: {100. * correct / len(test_loader.dataset):.1f}%, \", end=\"\")\n",
         "\n",
-        "\n",
-        "TOTAL_EPOCH = 10\n",
-        "losses = []\n",
         "\n",
         "# The transform needs to live on the same device as the model and the data.\n",
         "for epoch in range(1, TOTAL_EPOCH + 1):\n",
+        "    start_time = time.perf_counter()\n",
         "    train(model, epoch)\n",
         "    test(model, epoch)\n",
+        "    print(f\"time: {time.perf_counter() - start_time:.0f} seconds\")\n",
         "\n",
         "# Model predictiton after training\n",
         "waveform, sample_rate, label, speaker_id, utterance_number = train_set[0]\n",
